--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -7,6 +7,7 @@
 @import './variables';
 @import './colors';
 @import './font-sizes';
+@import './htmlOverrides';
 
 html {
     position: relative !important;
@@ -32,6 +33,7 @@ h1, h2, h3, h4, h5 {
     white-space: pre-wrap;
 
 }
+
 
 #onetrust-consent-sdk #onetrust-banner-sdk {
 
