finished, adding col styling group  next

--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -43,3 +43,22 @@ h1, h2, h3, h4, h5 {
     }
     
 }
+//opp 
+.opp-bg {
+    .opp {
+        span {
+            width: 20px;
+            height: 20px;
+            font-size: 11px;
+            margin-left: 8px;
+        }
+        .arrow {
+            background: url('https://cloud-assets.extrahop.com/icons/arrows/tangerine-right.svg') no-repeat left 2px;
+            padding-left: $med;
+            width: 24px;
+            height: 24px;
+        }
+    }
+    
+
+}
