contact boxes started, styling needs work still

--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -14,6 +14,10 @@ $gradient: linear-gradient(to right, $sapphire, $plum);
 $gradient-reverse: linear-gradient(to right, $plum, $sapphire);
 $vgradient: linear-gradient(to bottom, $sapphire, $plum);
 
+$dark-blue:#01192F;
+$deep-blue:#000912;
+$teal: #10C8F0;
+
 $magenta: #EC0889; // rgb(236/0/137)
 $magenta-dim: #BD006E;
 $magenta-dark: rgb(127,40,84);
