--- a/app/styles/colors.scss
+++ b/app/styles/colors.scss
@@ -28,12 +28,24 @@
 .text-lime {
     color: $lime;
 }
+.text-deep-blue {
+    color: $deep-blue;
+}
+.text-dark-blue {
+    color: $dark-blue;
+}
+.text-teal {
+    color: $teal;
+}
 
 
 // Background color or background gradient
 
 .bg-black {
     background-color: $black;
+}
+.bg-dark-blue {
+    background-color: $dark-blue;
 }
 
 .bg-pale-gray {
